# Kung-Fu-Chess

./: .gitignore  Board.cpp  Board.hpp  BoardParser.hpp  BoardTests.cpp  CMakeLists.txt  CTD create server.pptx  Game.cpp  Game.hpp  IO.hpp  ParseError.hpp  Piece.cpp  Piece.hpp  PieceTests.cpp  README.md  test1.txt
Common/: AnimationConfig.hpp  (+5 more)
To_KamaTech/: CMakeLists.txt
To_KamaTech/src/engine/: GameEngine.cpp
To_KamaTech/src/input/: BoardMapper.hpp  Controller.hpp
To_KamaTech/src/io/: BoardParser.cpp
To_KamaTech/src/model/: Board.cpp  Board.hpp
To_KamaTech/src/realtime/: Motion.hpp  RealTimeArbiter.cpp  RealTimeArbiter.hpp
To_KamaTech/src/rules/: PieceRules.hpp  RuleEngine.cpp
To_KamaTech/tests/integration/: PlaceholderTests.cpp
To_KamaTech/tests/unit/: BoardMapperTests.cpp  ControllerTests.cpp  PieceRulesTests.cpp  RealTimeArbiterTests.cpp  RuleEngineTests.cpp
UI/: .gitignore  CMakeLists.txt
UI/pieces3/NW/states/long_rest/: config.json
UI/pieces3/NW/states/short_rest/: config.json
UI/pieces4/: board.csv
UI/pieces4/BB/states/idle/: config.json
UI/pieces4/BB/states/jump/: config.json
UI/pieces4/BB/states/long_rest/: config.json
UI/pieces4/BB/states/move/: config.json
UI/pieces4/BB/states/short_rest/: config.json
UI/pieces4/BW/states/idle/: config.json
UI/pieces4/BW/states/jump/: config.json
UI/pieces4/BW/states/long_rest/: config.json
UI/pieces4/BW/states/move/: config.json
UI/pieces4/BW/states/short_rest/: config.json
UI/pieces4/KB/states/idle/: config.json
UI/pieces4/KB/states/jump/: config.json
UI/pieces4/KB/states/long_rest/: config.json
UI/pieces4/KB/states/move/: config.json
UI/pieces4/KB/states/short_rest/: config.json
UI/pieces4/KW/states/idle/: config.json
UI/pieces4/KW/states/jump/: config.json
UI/pieces4/KW/states/long_rest/: config.json
UI/pieces4/KW/states/move/: config.json
UI/pieces4/KW/states/short_rest/: config.json
UI/pieces4/NB/states/idle/: config.json
UI/pieces4/NB/states/jump/: config.json
UI/pieces4/NB/states/long_rest/: config.json
UI/pieces4/NB/states/move/: config.json
UI/pieces4/NB/states/short_rest/: config.json
UI/pieces4/NW/states/idle/: config.json
UI/pieces4/NW/states/jump/: config.json
UI/pieces4/NW/states/long_rest/: config.json
UI/pieces4/NW/states/move/: config.json
UI/pieces4/NW/states/short_rest/: config.json
UI/pieces4/PB/states/idle/: config.json
UI/pieces4/PB/states/jump/: config.json
UI/pieces4/PB/states/long_rest/: config.json
UI/pieces4/PB/states/move/: config.json
UI/pieces4/PB/states/short_rest/: config.json
UI/pieces4/PW/states/idle/: config.json
UI/pieces4/PW/states/jump/: config.json
UI/pieces4/PW/states/long_rest/: config.json
UI/pieces4/PW/states/move/: config.json
UI/pieces4/PW/states/short_rest/: config.json
UI/pieces4/QB/states/idle/: config.json
UI/pieces4/QB/states/jump/: config.json
UI/pieces4/QB/states/long_rest/: config.json
UI/pieces4/QB/states/move/: config.json
UI/pieces4/QB/states/short_rest/: config.json
UI/pieces4/QW/states/idle/: config.json
UI/pieces4/QW/states/jump/: config.json
UI/pieces4/QW/states/long_rest/: config.json
UI/pieces4/QW/states/move/: config.json
UI/pieces4/QW/states/short_rest/: config.json
UI/pieces4/RB/states/idle/: config.json
UI/pieces4/RB/states/jump/: config.json
UI/pieces4/RB/states/long_rest/: config.json
UI/pieces4/RB/states/move/: config.json
UI/pieces4/RB/states/short_rest/: config.json
UI/pieces6/: README.txt
UI/src/: BoardConstants.hpp  BoardRenderer.cpp  BoardRenderer.hpp  BoardSetup.hpp  ClickTranslator.cpp  ClickTranslator.hpp  MouseHandler.cpp  MouseHandler.hpp  MovesLogRenderer.cpp  MovesLogRenderer.hpp  Render.cpp  Sprite.cpp  Sprite.hpp  SpriteManager.cpp  SpriteManager.hpp  img.cpp  main.cpp  piece.cpp  piece.hpp
UI/src/input/: ClickTranslator.cpp  MouseHandler.cpp  MouseHandler.hpp
UI/src/rendering/: BoardConstants.hpp  BoardRenderer.cpp  BoardRenderer.hpp  BoardSetup.hpp  MovesLogRenderer.cpp  MovesLogRenderer.hpp  Render.hpp
UI/src/sprites/: SpriteManager.hpp  img.cpp  img.hpp
(+74 files in other folders)
